--- a/src/app/pages/user/about/preferences/preferences.page.html
+++ b/src/app/pages/user/about/preferences/preferences.page.html
@@ -22,7 +22,7 @@
             <ion-col size-xs="6" class="ion-align-items-center">
                 <ion-card class="category-card" mode="md" (click)="createMoment()" [ngStyle]="{'height': platform.width() >= 768 ? '300px' : '215px'}">
                     <ion-card-content>
-                        <img style="margin-bottom: 5px;" src="assets/img/plan.svg" alt="Create Plan Icon" />
+                        <img style="margin-bottom: 5px;" src="../../../../../assets/img/plan.svg" alt="Create Plan Icon" />
                         <br>
                         <strong>Create your Onboarding Process</strong>
                     </ion-card-content>
@@ -31,7 +31,7 @@
             <ion-col size-xs="6" class="ion-align-items-center">
                 <ion-card class="category-card" mode="md" (click)="chooseOnboardingProcess()" [ngStyle]="{'height': platform.width() >= 768 ? '300px' : '215px'}">
                     <ion-card-content>
-                        <img style="margin-bottom: 5px;" src="assets/img/template.svg" alt="Select Template Icon" />
+                        <img style="margin-bottom: 5px;" src="../../../../../assets/img/template.svg" alt="Select Template Icon" />
                         <br>
                         <strong>Select from templates</strong>
                     </ion-card-content>
