--- a/src/app/pages/user/discover/discover.page.html
+++ b/src/app/pages/user/discover/discover.page.html
@@ -27,9 +27,14 @@
       <ion-badge *ngIf="this.chatService && this.chatService.connectTabBadge" mode="md">{{this.chatService.connectTabBadge}}</ion-badge>
     </ion-menu-toggle>
     <ion-title>Discover</ion-title>
-    <ion-button slot="end" *ngIf="platform.width() < 768" (click)="mobileSearchBarVisible = !mobileSearchBarVisible" fill="clear" color="grey">
-      <ion-icon name="search"></ion-icon>
-    </ion-button>
+    <ion-buttons slot="end">
+      <ion-button id="signin" *ngIf="!authService.token" (click)="openRegister(0, '')">
+        <ion-text>Sign In</ion-text>
+      </ion-button>
+      <ion-button *ngIf="platform.width() < 768" (click)="mobileSearchBarVisible = !mobileSearchBarVisible" fill="clear" color="grey">
+        <ion-icon name="search"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-item lines="none" routerLink="/app/me" *ngIf="userData.user && platform.width() >= 768" slot="end" mode="md" style="--background: transparent">
       <ion-avatar slot="start">
         <ion-img *ngIf="userData.user && userData.user.avatar" [src]="userData.user.avatar"></ion-img>
