--- a/src/app/pages/feature/onboardfeature/onboardfeature.page.scss
+++ b/src/app/pages/feature/onboardfeature/onboardfeature.page.scss
@@ -389,16 +389,28 @@ app-onboardfeature {
     margin-right: 8px;
   }
 
+  .ql-editor {
+    padding-left: 0;
+    p, li {
+      font-size: 16px;
+    }
+  }
+
+  .ql-snow .ql-editor h3 {
+    font-size: 16px;
+  }
+
+  .ql-editor.ql-blank::before {
+    color: var(--ion-color-dark);
+    left: 0;
+  }
+
   .ql-container,.ql-editor, .ql-editor.ql-blank, .ql-editor.ql-blank::before, .ql-editor.ql-blank::after {
     -khtml-user-select: text !important;
     -moz-user-select: text !important;
     -ms-user-select: text !important;
     user-select: text !important;
     -webkit-user-select: text !important;
-  }
-
-  .ql-editor.ql-blank::before {
-    color: var(--ion-color-dark);
   }
 
 }
